--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ djangorestframework==3.7.7
 draftjs-exporter==2.0.0
 future==0.16.0
 get==0.0.39
+gunicorn==19.9.0
 html5lib==0.999999999
 idna==2.5
 mechanize==0.2.5
@@ -20,6 +21,7 @@ olefile==0.45.1
 Pillow==5.0.0
 post==0.0.26
 psycopg2==2.7.5
+psycopg2-binary==2.7.5
 public==0.0.65
 pymongo==3.6.1
 PySocks==1.6.8
